[package]
name = "word-lister"
version = "0.1.0"
authors = ["angus <spare_brain@yahoo.com>"]
edition = "2021"
build = "build.rs"
description = "Developed by Angus Bagchee. It can list dictionary words for given letters where letters can occur more than once, if needed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "word-lister"
identifier = "io.github.bagcheap.word-lister"
version = "0.01"
short_description = "Word finder for games like scrabble and wordlister"
long_description = "Developed by Angus Bagchee. It can list dictionary words for given letters where letters can occur more than once, if needed"
